# task3

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  README.md  azure-synapse-update-package.sh  azure-upload.sh  cloudbillingtool-run.py  cloudbillingtool.py  create_secret_dockerconfigjson.sh  create_secret_storageaccount.sh  docker-run.sh  hetzner_fix_data.py  pipeline.json  pyproject.toml  requirements.txt  setup.py  spark-run-cloudbillingtool.py  submitSparkjob.py  trigger.json  upload_grafana_dashboard.py
chart/: Chart.yaml  values.yaml
chart/templates/: cronjob.yaml  deployment.yaml
cloudbillingtool/: __init__.py  all_billing.py  aws_billing.py  aws_summary_billing.py  azure_billing.py  dummy.py  helper.py  hetzner_billing.py  mapping_file.py  uniform_billing.py
data/mappingfiles/: resource_mapping.csv  type_mapping.csv
docker/: docker-compose.yaml
grafana/: CloudBillingDashboard.json  SenecBillingDashBoard-1679432368286.json  test.json
notebooks/: RunCloudBillingTool.ipynb
sqldata/: sql_configure.sh  sql_create_tables.sh  sql_query.sh
terraform/cloudbillingtool/: main.tf  variables.tf
tests/: context.py  test_all_billing.py  test_aws_billing.py  test_aws_summary_billing.py  test_azure_billing.py  test_helpers.py  test_hetzner_billing.py
tests/data/: resource_mapping.csv  type_mapping.csv  type_mapping_table.csv
tests/data/aws/: Data-Transfer-Report-00001.csv  aws-costs-test-rocket9.csv  costs.csv
tests/data/aws_cost_summary/: senec_costs_2023.csv
tests/unit/: test_all_billing.py  test_azure_billing.py  test_hetzner_billing.py
(+10 files in other folders)
