[tool.poetry]
name = "cloudbillingtool"
version = "1.9.3"
description = "Visualizes costs across cloud providers"
authors = ["Kay Fleischmann <k.fleischmann.extern@senec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
